# personal-finance

./: .gitignore  README.md
backend/: .gitignore  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 00d654accda9_added_username_to_user_table.py  01424561774e_sync_user_model.py  069981a6b276_made_changes_to_the_db.py  2f9e7a0e7a41_initial_migration.py  457bfb87c2ad_fix_add_server_default_for_created_at.py  9d967b85b272_changes_to_the_db.py  b653f0fed367_modified_categories_table.py  b72c57d2cf05_updated_user_model.py  c194f2118483_create_users_table.py  cadf6838b781_fix_added_nullable_false_to_created_at_.py  d4b20e9d9bcb_built_categories_model.py  ef9bb98dcdb0_initial.py
backend/app/api/: auth.py  category.py  deps.py  main.py  transactions.py  users.py
backend/app/core/: config.py  jwt.py  logger.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: models.py  user.py
backend/app/db/schemas/: categories.py  transaction.py  user.py
backend/app/services/: auth.py  categories.py  parsing.py  transaction.py
frontend/: jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/pages/: Auth.jsx  Dashboard.jsx
